--- a/about.html
+++ b/about.html
@@ -209,9 +209,10 @@
         </section>
     </main>
 
-    <footer class="text-center"> <div class="container mx-auto px-6">
-            <p class="font-heading text-lg">&copy; <span id="currentYear"></span> Ashley Chan. All rights reserved.</p>
-            <p class="text-sm mt-2">Crafted with a touch of magic <i class="fas fa-magic-wand-sparkles"></i> and spirit.</p>
+    <footer class="text-center">
+        <div class="container mx-auto px-6">
+            <p class="font-heading text-lg">&copy; <span id="currentYear"></span> Ashley Chan.</p>
+            <p class="text-sm mt-2">Made with ❤️ by Ashley.</p>
         </div>
     </footer>
 
