--- a/contact.html
+++ b/contact.html
@@ -52,28 +52,28 @@
                             <label for="name" class="block font-heading text-lg mb-2">Your Name</label>
                             <input type="text" id="name" name="name" required
                                    class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors"
-                                   placeholder="e.g., Totoro">
+                                   placeholder="ex. Totoro">
                         </div>
 
                         <div class="mb-6">
                             <label for="email" class="block font-heading text-lg mb-2">Your Email</label>
                             <input type="email" id="email" name="email" required
                                    class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors"
-                                   placeholder="e.g., friend@forest.com">
+                                   placeholder="ex. friend@forest.com">
                         </div>
 
                         <div class="mb-6">
                             <label for="subject" class="block font-heading text-lg mb-2">Subject</label>
                             <input type="text" id="subject" name="subject"
                                    class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors"
-                                   placeholder="e.g., You're My Neighbor!">
+                                   placeholder="ex. You're My Neighbor!">
                         </div>
 
                         <div class="mb-8">
                             <label for="message" class="block font-heading text-lg mb-2">Your Message</label>
                             <textarea id="message" name="message" rows="5" required
                                       class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors resize-none"
-                                      placeholder="Hi, my name is Totoro and I'd love to connect!"></textarea>
+                                      placeholder="ex. Hi, my name is Totoro and I'd love to connect!"></textarea>
                         </div>
 
                         <div class="text-center">
@@ -110,9 +110,10 @@
         </section>
     </main>
 
-    <footer class="text-center"> <div class="container mx-auto px-6">
-            <p class="font-heading text-lg">&copy; <span id="currentYear"></span> Ashley Chan. All rights reserved.</p>
-            <p class="text-sm mt-2">Crafted with joy <i class="fas fa-star"></i> and a bit of Ghibli whimsy.</p>
+    <footer class="text-center">
+        <div class="container mx-auto px-6">
+            <p class="font-heading text-lg">&copy; <span id="currentYear"></span> Ashley Chan.</p>
+            <p class="text-sm mt-2">Made with ❤️ by Ashley.</p>
         </div>
     </footer>
 
