--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-        <section id="home" class="min-h-[calc(100vh-72px)] flex items-center justify-center hero-bg-haku-howl section-padding fade-in-section">
+        <section id="home" class="min-h-[calc(100vh-72px)] flex items-center justify-center section-padding fade-in-section">
             <div class="container mx-auto px-6 text-center relative z-10">
                 <img src="/images/index-picture.jpeg" alt="Your Name - Avatar" class="w-40 md:w-60 aspect-square object-cover mx-auto rounded-full shadow-2xl mb-8 border-4 border-howl-gold transform hover:scale-110 hover:shadow-[0_0_30px_rgba(249,219,126,0.7)] transition-all duration-300">
 
