fix pages & change theme

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="/images/index-picture.jpeg" alt="Your Name - Avatar" class="w-40 md:w-60 aspect-square object-cover mx-auto rounded-full shadow-2xl mb-8 border-4 border-howl-gold transform hover:scale-110 hover:shadow-[0_0_30px_rgba(249,219,126,0.7)] transition-all duration-300">
 
                 <h1 class="text-4xl md:text-5xl font-bold mb-10 text-center font-heading">Hi, I'm Ashley!</h1>
-                <h2 class="text-3 text-3xl">Incoming Google SWE Intern</h2>
+                <h2 class="text-3 text-haku-teal text-3xl">Incoming Google SWE Intern</h2>
                 <br/>
                 <p class="text-lg md:text-xl max-w-2xl mx-auto mb-10 text-light-slate leading-relaxed">
                     Feel free to browse around and learn more about me,
