--- a/skills.html
+++ b/skills.html
@@ -44,90 +44,95 @@
                 <h1 class="text-4xl md:text-5xl font-bold mb-12 text-center font-heading">Skills</h1>
 
                 <div class="mb-10">
-                    <h2 class="text-4xl font-heading mb-8 text-center md:text-left">Programming Languages</h2>
+                    <h2 class="text-4xl font-heading mb-8 text-center text-haku-teal md:text-left">Programming Languages</h2>
                     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6 md:gap-8">
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-cuttlefish fa-3x md:fa-4x mb-3 text-haku-teal"></i> <h3 class="font-semibold text-lg md:text-xl text-silver-haku">C++</h3>
+                            <i class="fab fa-cuttlefish fa-3x md:fa-4x mb-3 text-light-off-whit"></i> 
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">C++</h3> 
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-java fa-3x md:fa-4x mb-3 text-howl-gold"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">Java</h3>
+                            <i class="fab fa-java fa-3x md:fa-4x mb-3 mb-3 text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">Java</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-python fa-3x md:fa-4x mb-3 text-haku-teal"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">Python</h3>
+                            <i class="fab fa-python fa-3x md:fa-4x mb-3 text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">Python</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-google fa-3x md:fa-4x mb-3 text-howl-gold"></i> <h3 class="font-semibold text-lg md:text-xl text-silver-haku">Go</h3>
+                            <i class="fab fa-google fa-3x md:fa-4x mb-3 text-howl-gold"></i> 
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">Go</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-html5 fa-3x md:fa-4x mb-3 text-haku-teal"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">HTML</h3>
+                            <i class="fab fa-html5 fa-3x md:fa-4x mb-3  text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">HTML</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-css3-alt fa-3x md:fa-4x mb-3 text-howl-gold"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">CSS</h3>
+                            <i class="fab fa-css3-alt fa-3x md:fa-4x mb-3 text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">CSS</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-js-square fa-3x md:fa-4x mb-3 text-haku-teal"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">JavaScript</h3>
+                            <i class="fab fa-js-square fa-3x md:fa-4x mb-3 text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">JavaScript</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fas fa-database fa-3x md:fa-4x mb-3 text-howl-gold"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">SQL</h3>
+                            <i class="fas fa-database fa-3x md:fa-4x mb-3 text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">SQL</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fas fa-atom fa-3x md:fa-4x mb-3 text-haku-teal"></i> <h3 class="font-semibold text-lg md:text-xl text-silver-haku">Svelte</h3>
+                            <i class="fas fa-atom fa-3x md:fa-4x mb-3  text-howl-gold"></i> 
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">Svelte</h3>  
                         </div>
                     </div>
                 </div>
 
                 <div class="mb-10">
-                    <h2 class="text-4xl font-heading mb-8 text-center md:text-left">Tools & Technologies</h2>
+                    <h2 class="text-4xl font-heading mb-8 text-center text-haku-teal md:text-left">Tools & Technologies</h2>
                     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6 md:gap-8">
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fas fa-drafting-compass fa-3x md:fa-4x mb-3 text-haku-teal"></i> <h3 class="font-semibold text-lg md:text-xl text-silver-haku">Onshape (CAD)</h3>
+                            <i class="fas fa-drafting-compass fa-3x md:fa-4x mb-3  text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">Onshape (CAD)</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-git-alt fa-3x md:fa-4x mb-3 text-howl-gold"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">Git</h3>
+                            <i class="fab fa-git-alt fa-3x md:fa-4x mb-3 text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">Git</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fab fa-linux fa-3x md:fa-4x mb-3 text-haku-teal"></i>
-                            <h3 class="font-semibold text-lg md:text-xl text-silver-haku">Linux</h3>
+                            <i class="fab fa-linux fa-3x md:fa-4x mb-3 text-light-off-white"></i>
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">Linux</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center flex flex-col items-center justify-center aspect-square">
-                            <i class="fas fa-cubes fa-3x md:fa-4x mb-3 text-howl-gold"></i> <h3 class="font-semibold text-lg md:text-xl text-silver-haku">SvelteKit</h3>
+                            <i class="fas fa-cubes fa-3x md:fa-4x mb-3 text-light-off-white"></i> 
+                            <h3 class="font-semibold text-lg md:text-xl text-accent-yellow">SvelteKit</h3>  
                         </div>
                     </div>
                 </div>
 
                 <div class="mb-10">
-                    <h2 class="text-3xl md:text-4xl font-heading mb-8 text-haku-teal text-center">Other Skills</h2>
+                    <h2 class="text-3xl md:text-4xl font-heading mb-8 md:text-center">Other Skills</h2>
                     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6 md:gap-8">
                         <div class="custom-card p-4 md:p-6 text-center">
-                            <h4 class="font-heading text-xl text-silver-haku">Problem Solving</h4>
+                            <h3 class="font-heading text-xl text-accent-yellow">Problem Solving</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center">
-                            <h3 class="font-heading text-xl text-silver-haku">Communication</h3>
+                            <h3 class="font-heading text-xl text-accent-yellow">Communication</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center">
-                            <h3 class="font-heading text-xl text-silver-haku">Teamwork</h3>
+                            <h3 class="font-heading text-xl text-accent-yellow">Teamwork</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center">
-                            <h3 class="font-heading text-xl text-silver-haku">Collaboration</h3>
+                            <h3 class="font-heading text-xl text-accent-yellow">Collaboration</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center">
-                            <h3 class="font-heading text-xl text-silver-haku">Leadership</h3>
+                            <h3 class="font-heading text-xl text-accent-yellow">Leadership</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center">
-                            <h3 class="font-heading text-xl text-silver-haku">Documentation</h3>
+                            <h3 class="font-heading text-xl text-accent-yellow">Documentation</h3>  
                         </div>
                         <div class="custom-card p-4 md:p-6 text-center">
-                            <h3 class="font-heading text-xl text-silver-haku">Adaptability</h3>
+                            <h3 class="font-heading text-xl text-accent-yellow">Adaptability</h3>  
                         </div>
                          <div class="custom-card p-4 md:p-6 text-center">
-                            <h3 class="font-heading text-xl text-silver-haku">Quick Learning</h3>
+                            <h3 class="font-heading text-xl text-accent-yellow">Quick Learning</h3>  
                         </div>
                     </div>
                 </div>
