--- a/contact.html
+++ b/contact.html
@@ -51,28 +51,28 @@
                         <div class="mb-6">
                             <label for="name" class="block font-heading text-lg mb-2">Your Name</label>
                             <input type="text" id="name" name="name" required
-                                   class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors"
+                                   class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none text-dark-slate"
                                    placeholder="ex. Totoro">
                         </div>
 
                         <div class="mb-6">
                             <label for="email" class="block font-heading text-lg mb-2">Your Email</label>
                             <input type="email" id="email" name="email" required
-                                   class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors"
+                                   class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none text-dark-slate"
                                    placeholder="ex. friend@forest.com">
                         </div>
 
                         <div class="mb-6">
                             <label for="subject" class="block font-heading text-lg mb-2">Subject</label>
                             <input type="text" id="subject" name="subject"
-                                   class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors"
+                                   class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none text-dark-slate"
                                    placeholder="ex. You're My Neighbor!">
                         </div>
 
                         <div class="mb-8">
                             <label for="message" class="block font-heading text-lg mb-2">Your Message</label>
                             <textarea id="message" name="message" rows="5" required
-                                      class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none transition-colors resize-none"
+                                      class="w-full px-4 py-3 rounded-lg border-2 focus:outline-none text-dark-slate resize-none"
                                       placeholder="ex. Hi, my name is Totoro and I'd love to connect!"></textarea>
                         </div>
 
@@ -81,23 +81,21 @@
                                 <i class="fas fa-paper-plane mr-2"></i>Send Message
                             </button>
                         </div>
-                        <div id="formMessage" class="mt-4 text-center"></div> </form>
+                        <div id="formMessage" class="mt-4 text-center"></div>
+                    </form>
                 </div>
 
                 <div class="text-center mt-16">
                     <h2 class="text-2xl md:text-3xl font-heading mb-6 text-pink-highlight">Other ways to Connect!</h2>
                     <div class="flex justify-center space-x-6">
-                        <!-- Github -->
                         <a href="https://github.com/Ashleyc417" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"
                            class="hover:text-pink-highlight transition-colors text-4xl transform hover:scale-110">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <!-- Instagram -->
-                         <a href="https://www.instagram.com/ashleychan_/" target="_blank" rel="noopener noreferrer" aria-label="instagram Profile"
+                        <a href="https://www.instagram.com/ashleychan_/" target="_blank" rel="noopener noreferrer" aria-label="instagram Profile"
                            class="hover:text-pink-highlight transition-colors text-4xl transform hover:scale-110">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <!-- LinkedIn -->
                         <a href="https://www.linkedin.com/in/ashley-chan12" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"
                            class="hover:text-pink-highlight transition-colors text-4xl transform hover:scale-110">
                             <i class="fab fa-linkedin"></i>
