--- a/projects.html
+++ b/projects.html
@@ -41,26 +41,26 @@
     <main>
         <section id="projects" class="section-padding fade-in-section">
             <div class="container mx-auto px-6 max-w-6xl">
-                <h1 class="text-4xl md:text-5xl font-bold mb-12 text-center font-heading">My Crafted Creations</h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-12 text-center font-heading">Projects</h1>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-10">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 gap-8 md:gap-10">
 
                     <div class="custom-card p-6 rounded-xl shadow-lg flex flex-col h-full">
-                        <img src="https://placehold.co/600x400/76D7C4/1A2B3C?text=Simplify+C%2B%2B" alt="Simplify C++ Project Thumbnail" class="rounded-lg mb-4 w-full h-48 object-cover">
-                        <h2 class="text-2xl font-heading text-haku-teal mb-2">Simplify C++: Fully Hacks 2023</h2>
+                        <img src="/images/simplifycpp.png" alt="Simplify C++ Project Thumbnail" class="rounded-lg mb-4 w-full h-48 object-cover">
+                        <h1 class="text-3xl font-heading mb-2">Simplify C++</h1>
                         <p class="text-sm text-silver-haku mb-1"><i class="fas fa-calendar-alt mr-1 text-howl-gold"></i> April 2023</p>
                         
                         <div class="text-light-slate text-sm space-y-3 flex-grow">
                             <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Description:</h4>
+                                <h4 class="font-semibold text-haku-teal mb-1">Description:</h4>
                                 <p>Collaborated with 2 other team members during Fully Hacks 2023 to create a beginner-friendly website designed to help users learn the C++ programming language.</p>
                             </div>
                             <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Technologies Used:</h4>
+                                <h4 class="font-semibold text-haku-teal mb-1">Technologies Used:</h4>
                                 <p>HTML, CSS, JavaScript, Git.</p>
                             </div>
                             <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Key Outcomes & Skills Developed:</h4>
+                                <h4 class="font-semibold text-haku-teal mb-1">Key Outcomes & Skills Developed:</h4>
                                 <ul class="list-disc list-inside pl-2">
                                     <li>Developed skills in front-end web development (HTML, CSS, JavaScript).</li>
                                     <li>Gained experience in UI/UX design principles.</li>
@@ -69,78 +69,15 @@
                                 </ul>
                             </div>
                             <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Challenges Faced (Example):</h4>
-                                <p>[Example: Integrating interactive coding examples within the time constraints of the hackathon.]</p>
+                                <h4 class="font-semibold text-haku-teal mb-1">Challenges Faced:</h4>
+                                <p>Apart from one of our group members, it was our first time working on web development.</p>
                             </div>
                         </div>
-                        <div class="mt-auto pt-4">
-                             <a href="#" class="btn btn-secondary text-sm w-full text-center block">
+                            <div class="mt-auto pt-4">
+                             <a href="https://pillowgit.github.io/FullyHacks-2023/" target="_blank" class="btn btn-secondary text-sm w-full text-center block">
                                 <i class="fas fa-external-link-alt mr-2"></i>View Details / Live Demo
                             </a>
-                            </div>
-                    </div>
-                    <div class="custom-card p-6 rounded-xl shadow-lg flex flex-col h-full">
-                        <img src="https://placehold.co/600x400/F1C40F/1A2B3C?text=Project+No.+2" alt="Project Two Thumbnail" class="rounded-lg mb-4 w-full h-48 object-cover">
-                        <h2 class="text-2xl font-heading text-haku-teal mb-2">[Project Title 2]</h2>
-                        <p class="text-sm text-silver-haku mb-1"><i class="fas fa-calendar-alt mr-1 text-howl-gold"></i> [Date/Duration]</p>
-                        <div class="text-light-slate text-sm space-y-3 flex-grow">
-                            <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Description:</h4>
-                                <p>[A brief description of your second project. What was its purpose? What problem did it solve or what did it create?]</p>
-                            </div>
-                            <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Technologies Used:</h4>
-                                <p>[List key technologies, languages, frameworks, or tools.]</p>
-                            </div>
-                            <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Key Outcomes & Skills Developed:</h4>
-                                <ul class="list-disc list-inside pl-2">
-                                    <li>[Outcome/Skill 1]</li>
-                                    <li>[Outcome/Skill 2]</li>
-                                </ul>
-                            </div>
-                            <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Challenges Faced:</h4>
-                                <p>[Briefly mention a challenge and how it was overcome.]</p>
-                            </div>
                         </div>
-                        <div class="mt-auto pt-4">
-                            <a href="#" class="btn btn-secondary text-sm w-full text-center block">
-                                <i class="fas fa-external-link-alt mr-2"></i>View Details
-                            </a>
-                        </div>
-                    </div>
-                    <div class="custom-card p-6 rounded-xl shadow-lg flex flex-col h-full">
-                        <img src="https://placehold.co/600x400/A8B2D1/1A2B3C?text=Project+No.+3" alt="Project Three Thumbnail" class="rounded-lg mb-4 w-full h-48 object-cover">
-                        <h2 class="text-2xl font-heading text-haku-teal mb-2">[Project Title 3]</h2>
-                        <p class="text-sm text-silver-haku mb-1"><i class="fas fa-calendar-alt mr-1 text-howl-gold"></i> [Date/Duration]</p>
-                        <div class="text-light-slate text-sm space-y-3 flex-grow">
-                            <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Description:</h4>
-                                <p>[A brief description of your third project. What was its purpose? What problem did it solve or what did it create?]</p>
-                            </div>
-                            <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Technologies Used:</h4>
-                                <p>[List key technologies, languages, frameworks, or tools.]</p>
-                            </div>
-                            <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Key Outcomes & Skills Developed:</h4>
-                                <ul class="list-disc list-inside pl-2">
-                                    <li>[Outcome/Skill 1]</li>
-                                    <li>[Outcome/Skill 2]</li>
-                                </ul>
-                            </div>
-                             <div>
-                                <h4 class="font-semibold text-howl-gold mb-1">Challenges Faced:</h4>
-                                <p>[Briefly mention a challenge and how it was overcome.]</p>
-                            </div>
-                        </div>
-                        <div class="mt-auto pt-4">
-                            <a href="#" class="btn btn-secondary text-sm w-full text-center block">
-                                <i class="fas fa-external-link-alt mr-2"></i>View Details
-                            </a>
-                        </div>
-                    </div>
                     </div>
             </div>
         </section>
