fix centering for mobile navbar

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <div id="mobile-menu" class="mobile-menu-closed fixed inset-0 z-40 pt-16 md:hidden">
-            <div class="flex flex-col items-center space-y-8 mt-10">
+            <div class="flex flex-col items-center space-y-8">
                 <a href="index.html" class="mobile-nav-link font-heading">Home</a>
                 <a href="about.html" class="mobile-nav-link font-heading">About</a>
                 <a href="projects.html" class="mobile-nav-link font-heading">Projects</a>
