--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashley Chan - Portfolio Home</title>
+
+    <!-- favicon -->
+    <link rel="icon" href="/images/favicon.png" type="image/png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
